Resolving overflow issue in OrderHistoryPage

--- a/src/Screens/CustomerPortal/OrderHistoryPage/OrderHistoryPage.css
+++ b/src/Screens/CustomerPortal/OrderHistoryPage/OrderHistoryPage.css
@@ -1,8 +1,15 @@
 .orderHistoryPage {
-    padding: 50px;
+    padding: 50px 20px;
     background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    box-sizing: border-box;
+}
+
+.navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
